<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="ScanPDF"
        android:gravity="center"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"  >
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ic_launcher_background"
        android:text="@string/create_new_document"
        app:icon="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanPDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/md_theme_dark_onBackground"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="@+id/addButton"
        app:srcCompat="@drawable/baseline_picture_as_pdf_24" />

    <TextView
        android:id="@+id/scanPDFText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/scan_pdf"
        app:layout_constraintBottom_toBottomOf="@+id/scanPDF"
        app:layout_constraintEnd_toStartOf="@+id/scanPDF"
        app:layout_constraintTop_toTopOf="@+id/scanPDF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanOCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/md_theme_dark_onBackground"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/scanPDF"
        app:layout_constraintEnd_toEndOf="@+id/scanPDF"
        app:layout_constraintStart_toStartOf="@+id/scanPDF"
        app:srcCompat="@drawable/baseline_newspaper_24" />

    <TextView
        android:id="@+id/scanOCRText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/scan_ocr"
        app:layout_constraintBottom_toBottomOf="@+id/scanOCR"
        app:layout_constraintEnd_toStartOf="@+id/scanOCR"
        app:layout_constraintTop_toTopOf="@+id/scanOCR" />

</androidx.constraintlayout.widget.ConstraintLayout>